# sge

./: .gitignore  Cargo.toml  README.md  README.org  replace  rust-analyzer.toml  shell.nix  todo.org
.cargo/: config.toml
assets/shaders/rounded/: fragment.glsl  vertex.glsl
crates/bevy_math/: Cargo.toml
crates/bevy_math/src/: isometry.rs
crates/color/: Cargo.toml
crates/color/src/: lib.rs  schemes.rs
crates/engine_4_macros/src/: lib.rs
crates/error_union/: Cargo.toml
crates/error_union/src/: lib.rs
crates/feature_gated/: Cargo.toml
crates/feature_gated/src/: lib.rs
crates/gilrs_input_helper/: Cargo.toml  README.md
crates/gilrs_input_helper/examples/: basic.rs  multi_gamepad.rs
crates/gilrs_input_helper/src/: gamepad_state.rs  lib.rs
crates/global/: Cargo.toml
crates/global/src/: lib.rs
crates/global_macros/: Cargo.toml
crates/include_assets/: Cargo.toml
crates/persistence/: Cargo.toml
crates/persistence/src/: lib.rs
crates/persistence_macros/: Cargo.toml
crates/ref_type/: Cargo.toml
crates/ref_type_macros/: Cargo.toml
crates/sge_animation/: Cargo.toml
crates/sge_animation/src/: lib.rs
crates/sge_api/: Cargo.toml
crates/sge_api/src/: area.rs  lib.rs  shapes_2d.rs
crates/sge_async/: Cargo.toml
crates/sge_audio/: Cargo.toml
crates/sge_audio/src/: lib.rs
crates/sge_camera/: Cargo.toml
crates/sge_camera/src/: d2.rs  d3.rs  lib.rs
crates/sge_camera/src/controllers/: first_person.rs  orbit.rs  pan.rs  shake.rs
crates/sge_camera_controllers/: Cargo.toml
crates/sge_camera_controllers/src/: first_person.rs  lib.rs  orbit.rs  pan.rs  shake.rs
crates/sge_color/: Cargo.toml  build.rs
crates/sge_color/src/: data.rs  lib.rs  schemes.rs  u8.rs
crates/sge_config/: Cargo.toml
crates/sge_config/src/: lib.rs
crates/sge_debug_visualisations/: Cargo.toml
crates/sge_debug_visualisations/assets/: fragment.glsl  vertex.glsl
crates/sge_debug_visualisations/src/: grid.rs  lib.rs
crates/sge_debugging/: Cargo.toml
crates/sge_debugging/src/: implementation.rs  lib.rs
crates/sge_ecs/: Cargo.toml
crates/sge_ecs/src/: lib.rs
crates/sge_egui/: Cargo.toml
crates/sge_egui/src/: lib.rs
crates/sge_error_union/: Cargo.toml  output.rs
crates/sge_error_union/src/: lib.rs  main.rs
crates/sge_exec/: Cargo.toml
crates/sge_exec/src/: fs.rs  lib.rs  net.rs
crates/sge_feature_gated/: Cargo.toml
crates/sge_global/: Cargo.toml
crates/sge_global/src/: lib.rs
crates/sge_graph_networks/: Cargo.toml
crates/sge_graph_networks/src/: lib.rs
crates/sge_image/: Cargo.toml
crates/sge_image/src/: lib.rs  rendering.rs
crates/sge_include_assets/: Cargo.toml
crates/sge_include_assets/src/: lib.rs  main.rs
crates/sge_include_assets/test/a/: evil.ron  main.json  toml.toml
crates/sge_include_assets/test/a/b/c/: d.txt
crates/sge_input/: Cargo.toml
crates/sge_input/src/: gamepad.rs  helper.rs  lib.rs
crates/sge_input/src/helper/: current_input.rs  winit_input_helper.rs
crates/sge_logging/: Cargo.toml
crates/sge_logging/src/: lib.rs
crates/sge_macros/: Cargo.toml
crates/sge_macros/src/: lib.rs
crates/sge_macros/src/shape_variants/: codegen.rs  parse.rs
crates/sge_math/: Cargo.toml
crates/sge_math/src/: lib.rs  usize_rect.rs
crates/sge_math/src/collision/: mod.rs  ray.rs
crates/sge_math/src/transform/: d2.rs  d3.rs
crates/sge_particles/: Cargo.toml
crates/sge_particles/src/: lib.rs
crates/sge_persistence/: Cargo.toml
crates/sge_persistence/src/: lib.rs
crates/sge_persistence_macros/: Cargo.toml
crates/sge_persistence_macros/src/: lib.rs  main.rs
crates/sge_physics/: Cargo.toml
crates/sge_physics-bak/: Cargo.toml
crates/sge_physics/src/: lib.rs  player.rs
crates/sge_programs/: Cargo.toml
crates/sge_programs/shaders/cbezier/: fragment.glsl  vertex.glsl
crates/sge_programs/shaders/flat/: fragment.glsl  vertex.glsl
crates/sge_programs/shaders/metaball/: fragment.glsl  vertex.glsl
crates/sge_programs/shaders/qbezier/: fragment.glsl  vertex.glsl
crates/sge_programs/shaders/radial/: fragment.glsl  vertex.glsl
crates/sge_programs/src/: lib.rs
crates/sge_rendering/: Cargo.toml
crates/sge_rendering/src/: api.rs  d2.rs  d3.rs  lib.rs  materials.rs  object_3d.rs  pipeline.rs  post_processing.rs  shapes_3d.rs
crates/sge_rendering/src/d2/: mod.rs  queue.rs  scene.rs
crates/sge_rng/: Cargo.toml
crates/sge_routines/: Cargo.toml
crates/sge_shapes/: Cargo.toml
crates/sge_si/: Cargo.toml  output
crates/sge_text/: Cargo.toml
crates/sge_texture_atlas/: Cargo.toml
crates/sge_textures/: Cargo.toml
crates/sge_time/: Cargo.toml
crates/sge_types/: Cargo.toml
crates/sge_ui/: Cargo.toml
crates/sge_utils/: Cargo.toml
crates/sge_vectors/: Cargo.toml  README.md
crates/sge_window/: Cargo.toml
crates/winit_input_helper/: Cargo.toml
examples/: 2d_platformer.rs  2d_platformer_simple.rs  2d_rotation.rs  3d.rs  3d_render_textures.rs  action_mapping.rs  arrows.rs  async_asset_loading.rs  color_schemes.rs  coroutines.rs  cubic_bezier.rs  custom_init.rs  debug_textures.rs  default_material.rs  demo.rs  ecs.rs  ellipse.rs  first_person.rs  flip_y.rs  fonts.rs  gamepad.rs  gradients.rs  graph.rs  graph_path.rs  include_assets.rs  include_spritesheet.rs  interpolation.rs  logging.rs  material.rs  metaballs.rs  music_composition.rs  network.rs  opengl_version.rs  particle_emitter.rs  particles.rs  particles_2.rs  patterned_shapes.rs  persistence.rs  physics.rs  pixel_drawing.rs  (+24 more)
examples/md/: Cargo.toml  README.md
src/: api.rs  color.rs  draw_queue_2d.rs  input.rs  lib.rs  materials.rs  object_3d.rs  prelude.rs  programs.rs  render_pipeline.rs  scissor.rs  shapes_2d.rs  shapes_3d.rs  text_rendering.rs  user_storage.rs
src/camera/: mod.rs
src/input/: mod.rs
src/slop/: tests.rs
src/text_rendering/: mod.rs  rich_text.rs
src/textures/: mod.rs
src/ui/: active_fill.rs  border.rs  box_fill.rs  center.rs  col.rs  empty.rs  fill.rs  fit.rs  hoverable.rs  image.rs  mod.rs  padding.rs  prelude.rs  progress_bar.rs  rounded_fill.rs  row.rs  scroll.rs  sized_box.rs  text.rs
(+113 files in other folders)
