[package]
name = "sge_animation"
version = "1.0.1"
authors = [ "Lily Lopes <joshrl@proton.me>" ]
edition = "2024"
description = "Animation/lerp functionality for SGE"
license = "MIT"
repository = "https://github.com/LilyRL/sge"

[dependencies]
sge_vectors.workspace = true
sge_color.workspace = true
sge_math.workspace = true
sge_rendering.workspace = true
sge_shapes.workspace = true
sge_time.workspace = true
sge_types.workspace = true
