[package]
name = "sge_api"
version = "1.0.0"
edition = "2024"

[dependencies]
sge_vectors.workspace = true
easy-ext = "1.0.2"
paste.workspace = true
sge_color.workspace = true
sge_macros.workspace = true
sge_math.workspace = true
sge_rendering.workspace = true
sge_shapes.workspace = true
sge_textures.workspace = true
sge_types.workspace = true
sge_utils.workspace = true
