[package]
name = "sge_audio"
version = "1.0.2"
authors = [ "Lily Lopes <joshrl@proton.me>" ]
edition = "2024"
description = "Audio functionality for SGE"
license = "MIT"
repository = "https://github.com/LilyRL/sge"

[dependencies]
sge_error_union.workspace = true
sge_global.workspace = true
log.workspace = true
rodio.workspace = true
sge_macros.workspace = true
