[package]
name = "sge_camera"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_math.workspace = true
glium.workspace = true
global.workspace = true
log.workspace = true
sge_input.workspace = true
sge_rng.workspace = true
sge_time.workspace = true
sge_utils.workspace = true
sge_window.workspace = true
