[package]
name = "sge_camera"
version = "1.0.0"
edition = "2024"

[dependencies]
sge_vectors.workspace = true
glium.workspace = true
sge_global.workspace = true
log.workspace = true
sge_input.workspace = true
sge_rng.workspace = true
sge_time.workspace = true
sge_utils.workspace = true
sge_window.workspace = true
