[package]
name = "sge_camera_controllers"
version = "1.0.3"
authors = [ "Lily Lopes <joshrl@proton.me>" ]
edition = "2024"
description = "Camera controllers for SGE"
license = "MIT"
repository = "https://github.com/LilyRL/sge"

[dependencies]
sge_vectors.workspace = true
glium.workspace = true
sge_camera.workspace = true
sge_input.workspace = true
sge_math.workspace = true
sge_rendering.workspace = true
sge_time.workspace = true
sge_utils.workspace = true
sge_window.workspace = true
