[package]
name = "sge_color"
version = "0.0.1"
authors = [ "Lily Lopes <joshrl@proton.me>" ]
edition = "2024"

[dependencies]
bevy_math = { workspace = true }
egui_glium = { workspace = true }
palette = { workspace = true }
phf = { workspace = true }
image = { workspace = true }
rkyv = "0.8.15"

[build-dependencies]
palette = "0.7"
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
serde_json = { version = "1", features = ["preserve_order"] }
syn = { version = "2", features = ["full"] }
