[package]
name = "sge_color"
version = "0.0.1"
authors = [ "Lily Lopes <joshrl@proton.me>" ]
edition = "2024"

[dependencies]
bevy_math = { workspace = true }
egui_glium = { workspace = true }
palette = { workspace = true }
phf = { workspace = true }
image = { workspace = true }
rkyv = "0.8.15"

[build-dependencies]
palette.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde_json.workspace = true
syn.workspace = true
