[package]
name = "sge_color"
version = "1.0.0"
authors = [ "Lily Lopes <joshrl@proton.me>" ]
edition = "2024"
description = "Color functionality for SGE"
license = "MIT"
repository = "https://github.com/LilyRL/sge"

[dependencies]
sge_vectors = { workspace = true }
egui_glium = { workspace = true }
palette = { workspace = true }
phf = { workspace = true }
image = { workspace = true }
rkyv = "0.8.15"

[build-dependencies]
palette.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde_json.workspace = true
syn.workspace = true
