[package]
name = "sge_config"
version = "1.0.1"
authors = [ "Lily Lopes <joshrl@proton.me>" ]
edition = "2024"
description = "Configuration functionality for SGE"
license = "MIT"
repository = "https://github.com/LilyRL/sge"

[dependencies]
bon.workspace = true
glium.workspace = true
sge_global.workspace = true
log.workspace = true
sge_camera.workspace = true
sge_types.workspace = true
sge_window.workspace = true
