[package]
name = "sge_debug_visualisations"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_math.workspace = true
egui_glium.workspace = true
egui_plot.workspace = true
error_union.workspace = true
glium.workspace = true
sge_api.workspace = true
sge_camera.workspace = true
sge_color.workspace = true
sge_debugging.workspace = true
sge_math.workspace = true
sge_programs.workspace = true
sge_rendering.workspace = true
sge_text.workspace = true
sge_textures.workspace = true
sge_types.workspace = true
sge_window.workspace = true
