[package]
name = "sge_debug_visualisations"
version = "1.0.3"
authors = [ "Lily Lopes <joshrl@proton.me>" ]
edition = "2024"
description = "Debug visualisation for SGE"
license = "MIT"
repository = "https://github.com/LilyRL/sge"

[dependencies]
sge_vectors.workspace = true
sge_error_union.workspace = true
glium.workspace = true
sge_api.workspace = true
sge_camera.workspace = true
sge_color.workspace = true
sge_debugging.workspace = true
sge_math.workspace = true
sge_programs.workspace = true
sge_rendering.workspace = true
sge_text.workspace = true
sge_textures.workspace = true
sge_types.workspace = true
sge_window.workspace = true
sge_ui.workspace = true
