[package]
name = "sge_debugging"
version = "1.0.3"
authors = [ "Lily Lopes <joshrl@proton.me>" ]
edition = "2024"
description = "Debugging/profiling functionality for SGE"
license = "MIT"
repository = "https://github.com/LilyRL/sge"

[dependencies]
fps_ticker.workspace = true
sge_global.workspace = true
log.workspace = true

[features]
default = ["debugging"]
debugging = []
