[package]
name = "sge_ecs"
version = "1.0.3"
authors = [ "Lily Lopes <joshrl@proton.me>" ]
edition = "2024"
description = "ECS for SGE"
license = "MIT"
repository = "https://github.com/LilyRL/sge"

[dependencies]
bevy_ecs = "0.18.1"
sge_api.workspace = true
sge_error_union.workspace = true
sge_macros.workspace = true
sge_shapes.workspace = true
sge_time.workspace = true
sge_vectors.workspace = true
