[package]
name = "sge_egui"
version = "1.0.4"
authors = [ "Lily Lopes <joshrl@proton.me>" ]
edition = "2024"
description = "Egui related functionality for SGE"
license = "MIT"
repository = "https://github.com/LilyRL/sge"

[dependencies]
egui_glium.workspace = true
sge_global.workspace = true
log.workspace = true
sge_window.workspace = true
