[package]
name = "sge_error_union"
version = "1.0.2"
authors = [ "Lily Lopes <joshrl@proton.me>" ]
edition = "2024"
description = "Crate to create 'union' enums (especially for errors)"
license = "MIT"
repository = "https://github.com/LilyRL/sge"

[lib]
proc-macro = true

[dependencies]
anyhow.workspace = true
heck.workspace = true
image.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
