[package]
name = "sge_graph_networks"
version = "1.0.4"
authors = [ "Lily Lopes <joshrl@proton.me>" ]
edition = "2024"
description = "Graph network functionality for SGE"
license = "MIT"
repository = "https://github.com/LilyRL/sge"

[dependencies]
sge_vectors.workspace = true
nalgebra.workspace = true
sge_api.workspace = true
sge_camera.workspace = true
sge_color.workspace = true
sge_input.workspace = true
sge_rng.workspace = true
sge_time.workspace = true
