[package]
name = "sge_image"
version = "1.0.0"
authors = [ "Lily Lopes <joshrl@proton.me>" ]
edition = "2024"
description = "Software rendering functionality for SGE"
license = "MIT"
repository = "https://github.com/LilyRL/sge"

[dependencies]
sge_vectors.workspace = true
rayon.workspace = true
sge_camera.workspace = true
sge_color.workspace = true
sge_macros.workspace = true
sge_math.workspace = true
thiserror.workspace = true
