[package]
name = "sge_include_assets"
version = "1.0.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro-crate.workspace = true
proc-macro2.workspace = true
quote.workspace = true
rand.workspace = true
ron.workspace = true
serde.workspace = true
serde_json.workspace = true
syn.workspace = true
toml.workspace = true
walkdir.workspace = true
