[package]
name = "sge_include_assets"
version = "1.0.0"
authors = [ "Lily Lopes <joshrl@proton.me>" ]
edition = "2024"
description = "Asset bundling functionality for SGE"
license = "MIT"
repository = "https://github.com/LilyRL/sge"

[lib]
proc-macro = true

[dependencies]
proc-macro-crate.workspace = true
proc-macro2.workspace = true
quote.workspace = true
rand.workspace = true
ron.workspace = true
serde.workspace = true
serde_json.workspace = true
syn.workspace = true
toml.workspace = true
walkdir.workspace = true
