[package]
name = "sge_input"
version = "0.1.0"
edition = "2024"

[features]
precise_cursor_movement = ["winit_input_helper/precise_cursor_movement"]
gamepad = ["gilrs"]

[dependencies]
bevy_math.workspace = true
error_union.workspace = true
gilrs = { workspace = true, optional = true }
glium.workspace = true
global.workspace = true
log.workspace = true
sge_types.workspace = true
glutin-winit.workspace = true
winit_input_helper.workspace = true
