[package]
name = "sge_input"
version = "1.0.4"
authors = [ "Lily Lopes <joshrl@proton.me>" ]
edition = "2024"
description = "Input functionality for SGE"
license = "MIT"
repository = "https://github.com/LilyRL/sge"

[features]
precise_cursor_movement = []
gamepad = ["gilrs"]
clipboard = []

[dependencies]
sge_vectors.workspace = true
sge_error_union.workspace = true
gilrs = { workspace = true, optional = true }
glium.workspace = true
sge_global.workspace = true
log.workspace = true
sge_types.workspace = true
glutin-winit.workspace = true
winit.workspace = true
arboard = "3.6.1"
open = "5.3.4"
