[package]
name = "sge_logging"
version = "1.0.1"
authors = [ "Lily Lopes <joshrl@proton.me>" ]
edition = "2024"
description = "Logging provider for SGE"
license = "MIT"
repository = "https://github.com/LilyRL/sge"

[dependencies]
sge_vectors.workspace = true
log.workspace = true
sge_color.workspace = true
sge_text.workspace = true
sge_types.workspace = true
