[package]
name = "sge_macros"
version = "1.0.4"
authors = [ "Lily Lopes <joshrl@proton.me>" ]
edition = "2024"
description = "Macro functionality for SGE"
license = "MIT"
repository = "https://github.com/LilyRL/sge"

[lib]
proc-macro = true

[dependencies]
anyhow.workspace = true
glob.workspace = true
heck.workspace = true
image.workspace = true
proc-macro2.workspace = true
quote.workspace = true
rand.workspace = true
syn.workspace = true
