[package]
name = "sge_math"
version = "1.0.1"
authors = [ "Lily Lopes <joshrl@proton.me>" ]
edition = "2024"
description = "Macro functionality for SGE"
license = "MIT"
repository = "https://github.com/LilyRL/sge"

[dependencies]
sge_vectors.workspace = true
glium.workspace = true
sge_camera.workspace = true
sge_input.workspace = true
sge_window.workspace = true
