[package]
name = "sge_particles"
version = "1.0.0"
edition = "2024"

[dependencies]
sge_vectors.workspace = true
bon.workspace = true
dyn-clone = "1.0.20"
rayon.workspace = true
sge_api.workspace = true
sge_color.workspace = true
sge_rendering.workspace = true
sge_rng.workspace = true
sge_shapes.workspace = true
sge_time.workspace = true
