[package]
name = "sge_particles"
version = "1.0.4"
authors = [ "Lily Lopes <joshrl@proton.me>" ]
edition = "2024"
description = "Particle effects for SGE"
license = "MIT"
repository = "https://github.com/LilyRL/sge"

[dependencies]
sge_vectors.workspace = true
bon.workspace = true
dyn-clone = "1.0.20"
rayon.workspace = true
sge_api.workspace = true
sge_color.workspace = true
sge_rendering.workspace = true
sge_rng.workspace = true
sge_shapes.workspace = true
sge_time.workspace = true
