[package]
name = "sge_persistence"
version = "1.0.1"
authors = [ "Lily Lopes <joshrl@proton.me>" ]
edition = "2024"
description = "Persistence for SGE"
license = "MIT"
repository = "https://github.com/LilyRL/sge"

[dependencies]
sge_error_union.workspace = true
sge_persistence_macros = { path = "../sge_persistence_macros" }
rkyv.workspace = true
